Hasan/Pr 375 live market fix (#6436)
* auto-pull-translation

* chore: updated live market icons

* chore: updated stock and indices array

* chore: updated indices type

* chore: added rest market icons

* chore: updated forex description for EU

* chore: updated deriv packages

* chore: added mid value to live market data

* auto-pull-translation

* chore: updated market icon

* chore: updated deriv packages

* auto-pull-translation

* chore: updated deriv packages

* chore: updated deriv packages

* chore: updated market icon

* auto-pull-translation

* chore: moved instrument truncate css to styles css

* auto-pull-translation

* chore: updated market icon

* chore: updated deriv packages

* chore: updated 20 years slider class

* chore: updated live market hook

* chore: updated live market hook

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -7,3 +7,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.\[-webkit-box-orient\:vertical\] {
+    -webkit-box-orient: vertical;
+}
+.\[-webkit-line-clamp\:2\] {
+    -webkit-line-clamp: 2;
+}
+.\[display\:-webkit-box\] {
+    display: -webkit-box;
+}
